--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Reserva de Recursos</title>
     <link rel="stylesheet" href="style.css">
+    <!-- SPRINT 3 - LINK PARA NOVO ARQUIVO storage.js -->
+     <script defer src="storage.js"></script>
     <script defer src="script.js"></script>
 </head>
 <body>
@@ -107,6 +109,7 @@
             <form id="formPesquisa" class="grade duas">
                 <label>
                     Recurso
+                    <!-- SPRINT 3 - select será carregado a partir storage.js -->
                     <select name="recurso" id="campoRecurso" required>
                         <option value="">Selecione...</option>
                         <option>Laboratório 01</option>
@@ -144,6 +147,7 @@
         <!-- SEÇÃO DE HISTÓRICO -->
          <section id="secHistorico" class="cartao" aria-labelledby="titHistorico">
             <h2 id="titHistorico">Minhas reservas</h2>
+            <!-- SPRINT 3 - lista será carregada a partir do storage.js -->
             <ul id="listaReservas" class="lista" aria-live="polite">
 
             </ul>
